--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-willyfebrian",
+  "name": "backend-rupiah-reader",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
