--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend-rupiah-reader",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon ./src/server/server.js",
-    "start": "node ./src/server/server.js"
+    "start:dev": "nodemon ./src/server/appServer.js",
+    "start": "node ./src/server/appServer.js"
   },
   "keywords": [],
   "author": "",
